1. Sets up prisma 2. Adds livereload for public assets 3. Makes minimal user registration and jwt login

--- a/assets/src/templates/login.ejs
+++ b/assets/src/templates/login.ejs
@@ -1,9 +1,15 @@
 <%- include('_header') %>
 <h1>Login</h1>
-<form method="post" action="/login">
-  <label for="username">Username</label
-  ><input type="text" name="username" id="username" />
-  <label for="password">Username</label
-  ><input type="password" name="password" id="username" />
+<form id="login-form" method="post" action="/login">
+  <label for="username">Username</label>
+  <input type="text" name="username" id="username" />
+  <label for="password">Password</label>
+  <input type="password" name="password" id="username" />
+  <button type="submit">Submit</button>
 </form>
+
+<script src="/public/scripts/login.js"></script>
+<script>
+  setupLogin("login");
+</script>
 <%- include('_footer') %>
