--- a/assets/src/templates/profile.ejs
+++ b/assets/src/templates/profile.ejs
@@ -1,104 +1,113 @@
 <%- include('_header') %>
-<h1>Profile</h1>
-<nav>
-  <ul>
-    <li>Posts</li>
-    <li>Settings</li>
-  </ul>
-</nav>
-<div id="post-area">
-  <form id="post-creator">
-    <textarea
-      id="post-creator-content"
-      name="post-creator-content"
-      cols="30"
-      rows="10"
-    ></textarea>
-    <input
-      type="file"
-      id="post-creator-image-attach"
-      name="post-creator-image-attach"
-    />
-    <input type="submit" value="Create Post" />
-  </form>
-  <div id="post-list-container">
-    <h2>Your Posts</h2>
+  <h1>Profile</h1>
+  <nav>
+    <ul>
+      <li>Posts</li>
+      <li>Settings</li>
+    </ul>
+  </nav>
+  <div id="post-area">
+    <form id="post-creator" style="display: hidden;">
+      <textarea id="post-creator-content" name="post-creator-content" cols="30" rows="10"></textarea>
+      <input type="file" id="post-creator-image-attach" name="post-creator-image-attach" />
+      <input type="submit" value="Create Post" />
+    </form>
+    <div id="post-list-container">
+      <h2 id="post-listing-title">Your Posts</h2>
+      <div id="post-list-actual"></div>
+    </div>
   </div>
-</div>
 
-<script type="module">
-  import { loadLoginToken } from "/public/scripts/storage.js";
-  const token = loadLoginToken();
+  <script type="module">
+    import { loadLoginToken } from "/public/scripts/storage.js";
+    const token = loadLoginToken();
 
-  // document.addEventListener('DOMContentLoaded')
+    const postCreatorForm = document.getElementById("post-creator");
+    const postListingTitle = document.getElementById("post-listing-title");
 
-  const postCreatorForm = document.getElementById("post-creator");
-  async function handlePostSubmit(e) {
-    e.preventDefault();
-    const formData = new FormData();
-    const contentElement = document.getElementById("post-creator-content");
-    const imageAttachElemenet = document.getElementById("post-creator-image-attach");
-    formData.append(
-      "content",
-      contentElement.value
-    );
-    formData.append(
-      "image",
-      imageAttachElemenet.files[0]
-    );
-    formData.append("token", token);
-    const data = await (
-      await fetch("http://localhost:3000/post", {
-        method: "post",
-        // headers: {
-        //   "Content-Type": "application/json",
-        // },
-        body: formData,
-      })
-    ).json();
-    console.log({ data });
-    if (data.success) {
-      alert(data.message);
-      fetchPosts();
-      contentElement.value = null;
-      imageAttachElemenet.value = null;
+    const urlParams = new URLSearchParams(window.location.search);
+    const userId = urlParams.get('userId');
+
+    if (userId) {
+      postCreatorForm.style.display = 'none';
+      postListingTitle.replaceChildren('Posts');
+      // Then get another profile
+    } else {
+      postCreatorForm.style.display = 'block';
+      postListingTitle.replaceChildren('Your Posts');
+      // Just get my profile
     }
-  }
-  postCreatorForm.addEventListener("submit", handlePostSubmit, true);
 
-  async function fetchPosts() {
-    const {
-      data: { posts },
-    } = await (
-      await fetch("http://localhost:3000/posts", {
-        method: "get",
-        headers: {
-          "Content-Type": "application/json",
-          Authorization: `token: ${token}`,
-        },
-      })
-    ).json();
+    // postListingTitle.style.display = 'block';
 
-    const postListcontainer = document.getElementById("post-list-container");
-      postListcontainer.replaceChildren('');
-    posts.forEach((item) => {
-      const divContainerElement = document.createElement("div");
-      const imgElement = document.createElement("img");
-      const divContentElement = document.createElement("div");
-      imgElement.src = `/file-uploads/${item.imageId}.${item.ext}`;
-      const summary = (item.content || "").slice(0, 20);
-      imgElement.alt = summary.length <= 20 ? summary : summary + "...";
-      // divContentElement.value = item.content || "";
-      divContentElement.append(item.content || "");
-      divContainerElement.appendChild(imgElement);
-      divContainerElement.appendChild(divContentElement);
-      postListcontainer.appendChild(divContainerElement);
-    });
-  }
-  document.addEventListener("DOMContentLoaded", fetchPosts, true);
-</script>
-<!-- <script src="/public/scripts/login.js"></script>
+    // document.addEventListener('DOMContentLoaded')
+
+    async function handlePostSubmit(e) {
+      e.preventDefault();
+      const formData = new FormData();
+      const contentElement = document.getElementById("post-creator-content");
+      const imageAttachElemenet = document.getElementById("post-creator-image-attach");
+      formData.append(
+        "content",
+        contentElement.value
+      );
+      formData.append(
+        "image",
+        imageAttachElemenet.files[0]
+      );
+      formData.append("token", token);
+      const data = await (
+        await fetch("http://localhost:3000/post", {
+          method: "post",
+          // headers: {
+          //   "Content-Type": "application/json",
+          // },
+          body: formData,
+        })
+      ).json();
+      console.log({ data });
+      if (data.success) {
+        alert(data.message);
+        fetchPosts();
+        contentElement.value = null;
+        imageAttachElemenet.value = null;
+      }
+    }
+    postCreatorForm.addEventListener("submit", handlePostSubmit, true);
+
+    async function fetchPosts() {
+      const {
+        data: { posts },
+      } = await (
+        await fetch(`http://localhost:3000/posts${userId ? `/${userId}` : ''}`, {
+          method: "get",
+          headers: {
+            "Content-Type": "application/json",
+            Authorization: `token: ${token}`,
+          },
+        })
+      ).json();
+
+      const postListActual = document.getElementById('post-list-actual');
+      postListActual.replaceChildren('');
+      posts.forEach((item) => {
+        const divContainerElement = document.createElement("div");
+        const imgElement = document.createElement("img");
+        const divContentElement = document.createElement("div");
+        imgElement.src = `/file-uploads/${item.imageId}.${item.ext}`;
+        const summary = (item.content || "").slice(0, 20);
+        imgElement.alt = summary.length <= 20 ? summary : summary + "...";
+        // divContentElement.value = item.content || "";
+        divContentElement.append(item.content || "");
+        divContainerElement.appendChild(imgElement);
+        divContainerElement.appendChild(divContentElement);
+        postListActual.appendChild(divContainerElement);
+      });
+    }
+    document.addEventListener("DOMContentLoaded", fetchPosts, true);
+  </script>
+  <!-- <script src="/public/scripts/login.js"></script>
 <script>
   setupLogin("register");
 </script> -->
-<%- include('_footer') %>
+  <%- include('_footer') %>
