--- a/assets/src/templates/profile.ejs
+++ b/assets/src/templates/profile.ejs
@@ -166,6 +166,11 @@
       const commentListElement = document.createElement("div");
       commentListElement.className = "post-comment-list";
 
+      item.commentList.forEach((commentItem) => {
+        const commentElement = createCommentElement({ ...commentItem });
+        commentListElement.append(commentElement);
+      });
+
       commentSectionElement.append(commentFormElement, commentListElement);
 
       imgElement.src = `/file-uploads/${item.imageId}.${item.ext}`;
