Sets up typescript compilation through webpack

--- a/assets/src/templates/index.ejs
+++ b/assets/src/templates/index.ejs
@@ -9,9 +9,6 @@
   <a href="/public/profile.html">Profile</a>
 </nav>
 
-<script style="display: hidden" type="module">
-  import { toggleInHomePageByLogin } from "/public/scripts/login.js";
-  toggleInHomePageByLogin();
-</script>
+<script src="/public/scripts/home.bundle.js"></script>
 
 <%- include('_footer') %>
