--- a/assets/src/templates/login.ejs
+++ b/assets/src/templates/login.ejs
@@ -8,9 +8,6 @@
   <button type="submit">Submit</button>
 </form>
 
-<script type="module">
-  import { setupLogin } from "/public/scripts/login.js";
-  setupLogin("login");
-</script>
+<script src="/public/scripts/login.bundle.js"></script>
 
 <%- include('_footer') %>
