--- a/assets/src/templates/register.ejs
+++ b/assets/src/templates/register.ejs
@@ -8,8 +8,6 @@
   <button type="submit">Submit</button>
 </form>
 
-<script src="/public/scripts/login.js"></script>
-<script>
-  setupLogin("register");
-</script>
+<script src="/public/scripts/register.bundle.js"></script>
+
 <%- include('_footer') %>
