Makes profile navigation items have click responses

--- a/assets/src/templates/profile.ejs
+++ b/assets/src/templates/profile.ejs
@@ -1,9 +1,9 @@
 <%- include('_header') %>
-<h1>Profile</h1>
+<h1 id="profile-page-title">Profile</h1>
 <nav id="nav-menu">
   <ul>
-    <li>Posts</li>
-    <li>Settings</li>
+    <li attr-myprofilemode="posts">Posts</li>
+    <li attr-myprofilemode="settings">Settings</li>
   </ul>
 </nav>
 <section
