Adds return home link

--- a/assets/src/templates/profile.ejs
+++ b/assets/src/templates/profile.ejs
@@ -1,5 +1,6 @@
 <%- include('_header') %>
 <h1 id="profile-page-title">Profile</h1>
+<a id="return-home-link" href="/">Return Home</a>
 <nav id="nav-menu">
   <ul>
     <li attr-myprofilemode="posts">Posts</li>
